# ics12-proto-rs

./: Cargo.toml  README.md
src/: client.rs  lib.rs
