[package]
name = "ics12-proto"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ['Octopus Network <hi@oct.network>']
homepage = "https://oct.network"
readme = "README.md"
repository = "https://github.com/octopus-network/ics12-proto-rs/"
description = "ics12 proto for near light client."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.12", default-features = false }
bytes = { version = "1.5.0",  default-features = false }
ibc-proto = { version = "0.38.0", default-features = false }


[features]
default = ["std"]
std = [
    "prost/std",
    "bytes/std",
    "ibc-proto/std",
]

[patch.crates-io]
# ibc proto
ibc-proto = { git = "https://github.com/octopus-network/ibc-proto-rs.git", branch = "v0.38.0-octopus"}
